--- a/index.html
+++ b/index.html
@@ -4,4 +4,7 @@
         <meta charset="utf-8" lang="en">
         <title>Odin Recipes</title>
     </head>
-</html>go
+    <body>
+        <h1>Odin Recipes</h1>
+    </body>
+</html>
