--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Odin Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Recipes From Around the World</h1>
+        <a href="recipes/chicken-stir-fry.html">Chicken Stir Fry</a>
     </body>
 </html>
