Complete gyro recipe, homepage fix
Made homepage links in a ul to put them on separate lines. Added a gyro image to the img folder and completed the full gyro recipe

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Recipes From Around the World</h1>
-        <a href="recipes/chicken-stir-fry.html">Chicken Stir Fry</a>
+            <ul>
+                <li><a href="recipes/chicken-stir-fry.html">Chicken Stir Fry</a></li>
+                <li><a href="recipes/enchilada.html">Green Chicken Enchilada</a></li>
+                <li><a href="recipes/gyros.html">Traditional Gyros</a></li>
+            </ul>
     </body>
 </html>
