--- a/recipes/chicken-stir-fry.html
+++ b/recipes/chicken-stir-fry.html
@@ -1,3 +1,8 @@
+<head>
+    <meta charset="utf-8" lang="en">
+    <title>Chicken Stir Fry</title>
+    <link rel="stylesheet" href="../styles.css">
+</head>
 <h1>Chicken Stir Fry</h1>
 <body>
 <img src="../img/Chicken-Stir-Fry-main-2.webp" alt="A finished version of the chicken stir fry recipe">
