--- a/recipes/gyros.html
+++ b/recipes/gyros.html
@@ -1,3 +1,8 @@
+<head>
+    <meta charset="utf-8" lang="en">
+    <title>Traditonal Gyros</title>
+    <link rel="stylesheet" href="../styles.css">
+</head>
 <h1>Traditional Gyros</h1>
 <body>
 <img src="../img/gyro.webp" alt="A finished version of the Tradtional Gyro recipe">
