--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
     <head>
         <meta charset="utf-8" lang="en">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Recipes From Around the World</h1>
+            <div>
             <ul>
                 <li><a href="recipes/chicken-stir-fry.html">Chicken Stir Fry</a></li>
                 <li><a href="recipes/enchilada.html">Green Chicken Enchilada</a></li>
                 <li><a href="recipes/gyros.html">Traditional Gyros</a></li>
             </ul>
+            </div>
     </body>
 </html>
