--- a/recipes/enchilada.html
+++ b/recipes/enchilada.html
@@ -1,21 +1,27 @@
+<head>
+    <meta charset="utf-8" lang="en">
+    <title>Green Chicken Enchilada</title>
+    <link rel="stylesheet" href="../styles.css">
+</head>
 <h1>Green Chicken Enchilada</h1>
 <body>
 <img src="../img/Enchilada.webp" alt="A finished version of the green chicken enchilada recipe">
-    <h2>Easier and More Delicious than Fast Food Mexican!</h2>
-        <p>Very easy to make! Chicken and Monterey Jack Cheese filled flour tortillas topped with green enchilada sauce. I make Mexican Rice to serve on the side.</p>
-    <h3>Ingredients</h3>
-    <ul>
-        <li>1 pound skinless, boneless chicken breast halves</li>
-        <li>12 (10 inch) flour tortillas</li>
-        <li>1 (8 ounce) package shredded Monterey Jack cheese</li>
-        <li>1 (19 ounce) can green enchilada sauce</li>
-        
-    </ul>
-    <h3>Steps</h3>
-    <ol>
-        <li>In a pot with enough water to cover, boil the chicken 25 minutes, or until juices run clear. Drain, cool, and shred.</li>
-        <li>Preheat oven to 350 degrees F (175 degrees C). Lightly grease a medium baking dish.</li>
-        <li>Fill each tortilla with equal amounts of chicken and cheese, reserving 1/4 cup cheese for topping. Roll tortillas to form enchiladas. Arrange enchiladas in the prepared baking dish. Cover with the enchilada sauce.</li>
-        <li>Bake enchiladas 30 minutes in the preheated oven. Top with reserved cheese, and continue baking 5 minutes, until cheese is melted.</li>
-    </ol>
+    <div>
+        <h2>Easier and More Delicious than Fast Food Mexican!</h2>
+            <p>Very easy to make! Chicken and Monterey Jack Cheese filled flour tortillas topped with green enchilada sauce. I make Mexican Rice to serve on the side.</p>
+        <h3>Ingredients</h3>
+            <ul>
+                <li>1 pound skinless, boneless chicken breast halves</li>
+                <li>12 (10 inch) flour tortillas</li>
+                <li>1 (8 ounce) package shredded Monterey Jack cheese</li>
+                <li>1 (19 ounce) can green enchilada sauce</li>
+            </ul>
+        <h3>Steps</h3>
+            <ol>
+                <li>In a pot with enough water to cover, boil the chicken 25 minutes, or until juices run clear. Drain, cool, and shred.</li>
+                <li>Preheat oven to 350 degrees F (175 degrees C). Lightly grease a medium baking dish.</li>
+                <li>Fill each tortilla with equal amounts of chicken and cheese, reserving 1/4 cup cheese for topping. Roll tortillas to form enchiladas. Arrange enchiladas in the prepared baking dish. Cover with the enchilada sauce.</li>
+                <li>Bake enchiladas 30 minutes in the preheated oven. Top with reserved cheese, and continue baking 5 minutes, until cheese is melted.</li>
+            </ol>
+    </div>
     </body>
